--- a/index.html
+++ b/index.html
@@ -35,7 +35,17 @@
 			<i class="fas fa-backward" id="prev" title="Previous"></i>
 			<i class="fas fa-play main-button" id="play" title="Play"></i>
 			<i class="fas fa-forward" id="next" title="Next"></i>
+			<div class="volume">
+				<div class="volume-icon">
+					<i class="fas fa-volume-up" title="Mute" id="volume-icon"></i>
+				</div>
+				<div class="volume-range" title="Change Volume">
+					<div class="volume-bar"></div>
+				</div>
+			</div>
+		
 		</div>
+		
 	</div>
 <script src="music.js"></script>
 </body>
